--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=proyectoMama
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mamaproyecto
-spring.datasource.username=root
-spring.datasource.password=santi2409
+# Usar la URL de JawsDB
+spring.datasource.url=jdbc:mysql://nnmeqdrilkem9ked.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j1gucx7a1liyav6z
+spring.datasource.username=sypnmy3hxh0zppzu
+spring.datasource.password=c8uoqpfys08128xo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-sprint.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+
