--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+# Nombre de la aplicación
 spring.application.name=proyectoMama
 
-# Usar la URL de JawsDB
+# URL de conexión a la base de datos JawsDB
 spring.datasource.url=jdbc:mysql://nnmeqdrilkem9ked.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j1gucx7a1liyav6z
 spring.datasource.username=sypnmy3hxh0zppzu
 spring.datasource.password=c8uoqpfys08128xo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+
+# Configuración de JPA
+spring.jpa.show-sql=true  
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-
+# Dialecto adicional (opcional, ya que ya se ha especificado anteriormente)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
