--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.datasource.username=sypnmy3hxh0zppzu
 spring.datasource.password=c8uoqpfys08128xo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Configuración de HikariCP (pool de conexiones)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+
 # Configuración de JPA
 spring.jpa.show-sql=true  
 spring.jpa.hibernate.ddl-auto=update
