--- a/java/src/main/resources/META-INF/aplication.properties
+++ b/java/src/main/resources/META-INF/aplication.properties
@@ -1,19 +1,19 @@
-# Nombre de la aplicaci髇
+# Nombre de la aplicaci贸n
 spring.application.name=proyectoMama
 
-# URL de conexi髇 a la base de datos JawsDB
+# URL de conexi贸n a la base de datos JawsDB
 spring.datasource.url=jdbc:mysql://nnmeqdrilkem9ked.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/rdbyn632nwlpcqzv
 spring.datasource.username=rz50h2jq18eq456a
 spring.datasource.password=j5515sweeb08s8es
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuraci髇 de HikariCP (pool de conexiones)
+# Configuraci贸n de HikariCP (pool de conexiones)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 
-# Configuraci髇 de JPA
+# Configuraci贸n de JPA
 spring.jpa.show-sql=true  
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
