--- a/java/src/main/resources/META-INF/aplication.properties
+++ b/java/src/main/resources/META-INF/aplication.properties
@@ -1,19 +1,13 @@
-spring.application.name=proyectoMama
-
-# URL de conexión a la base de datos JawsDB
-spring.datasource.url=jdbc:mysql://nnmeqdrilkem9ked.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/rdbyn632nwlpcqzv
-spring.datasource.username=rz50h2jq18eq456a
-spring.datasource.password=j5515sweeb08s8es
+spring.datasource.url=jdbc:mysql://q68u8b2buodpme2n.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wjy6dspsf3mr40c2
+spring.datasource.username=k5a0t5rblnw39gpz
+spring.datasource.password=xwpqa3drd5nqh5iz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de HikariCP (pool de conexiones)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 
-# Configuración de JPA
 spring.jpa.show-sql=true  
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
