--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,19 +1,12 @@
-spring.application.name=proyectoMama
-
-spring.datasource.url=jdbc:mysql://q68u8b2buodpme2n.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wjy6dspsf3mr40c2
-spring.datasource.username=k5a0t5rblnw39gpz
-spring.datasource.password=xwpqa3drd5nqh5iz
+spring.datasource.url=jdbc:mysql://localhost:3306/hofusushi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=santi2409
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.hikari.maximum-pool-size=10
-
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1800000
-
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
